[project]
name = "pyaux"
version = "5.0.0"
description = "A collection of small useful helpers"
readme = "README.rst"
authors = [{name = "HoverHell", email = "hoverhell@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Things that are useful to simply have around:
recommended = [
    "ipdb",
    "ipython",
    "orjson",
    "PyYAML",
    "toml",
]
# All things that are known to be used in some part of this
# library or another.
known = [
    "django",  # in the psql helper
    "line_profiler",
    "pandas",  # here and there
    "Pygments",  # json / yaml coloring
    "pylzma",  # helpers for it
    "build",
    "twine",
]
req = [
    "requests[ssl]",
]

[dependency-groups]
dev = [
    "hydev>=2.0.0",
    "pygments>=2.20.0",
    "requests>=2.34.2",
    "types-markdown>=3.10.2.20260518",
    "types-pygments>=2.20.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-simplejson>=3.20.0.20260518",
    "types-ujson>=5.10.0.20250822",
]

[project.scripts]
pylzcat = "pyaux.lzcat:_lzcat_main"
pyunlzma = "pyaux.lzcat:_lzcat_main"
pyenlzma = "pyaux.lzmah:_lzma_main"
fjson_yaml = "pyaux.bin.fjson_yaml:main"
fyaml_json = "pyaux.bin.fyaml_json:main"
"fjson.py" = "pyaux.bin.fjson:main"
fmsgp_json = "pyaux.bin.fmsgp_json:main"
f_convert = "pyaux.bin.f_convert:main"

[project.urls]
Home = "https://gitlab.com/hoverhell/pyaux"

[tool.flit.sdist]
include = [
    "LICENSE",
    "README.rst",
]
# Minimal set of files, just for the installation.
exclude = [
    ".gitignore",
]

[tool.hydev]
uv = true

[[tool.mypy.overrides]]
module = [
    "billiard.*",
    "celery.*",
    "coloredlogs.*",
    "highcharts",
    "line_profiler.*",

    # Optional serializers:
    "anyjson.*",
    "ipdb.*",
    "msgpack.*",
    "orjson.*",
    "pylzma.*",
]
ignore_missing_imports = true

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
